--- a/src/App.css
+++ b/src/App.css
@@ -5,12 +5,95 @@
   text-align: center;
 }
 
-.envoltura {
-  display: inline;
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
-.envoltura > div {
-  display: inline-block;
+.empleados {
+  background-color: rgb(248, 248, 248);
+  border: 2px solid rgb(221, 221, 221);
+}
+
+.envoltura {
+  width: 100%;
+  height: 100%;
+  gap: 2rem;
+
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  
+  padding-bottom: 2rem;
+}
+
+.ficha__empleado {
+  width: 30%;
+  height: 250px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  background-color: aliceblue;
+  border: 2px solid rgb(221, 221, 221);
+  border-radius: 15px;
+  box-shadow: 5px 10px 10px rgb(223, 223, 223);
+}
+
+.calculadora {
+  width: 100%;
+  height: 100%;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  
+  background-color: rgb(248, 248, 248);
+  border: 2px solid rgb(221, 221, 221);
+
+  margin-top: 2rem;
+}
+
+.calculadora__botones {
+  width: 100%;
+  gap: 2rem;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  margin-top: 1rem;
+}
+
+.boton {
+  padding: 10px 20px;
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.resultado {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  color: blue;
+  font-weight: 700;
+  font-size: 70px;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
 
 .logo {
@@ -19,11 +102,23 @@
   will-change: filter;
   transition: filter 300ms;
 }
+
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
+
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
+}
+
+footer {
+  gap: 2rem;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  font-weight: bold;
 }
 
 @keyframes logo-spin {
